Ajuste de ejecució de test y generación de reporte de ejecución de pruebas